# omni-ai

./: .gitignore  LICENSE  README.md
apps/server/: .env.example  .gitignore  pyproject.toml  requirements.txt
apps/server/alembic/: env.py
apps/server/alembic/versions/: 0001_create_users_table.py  0002_create_transactions_table.py  0003_create_todos_table.py  0004_create_notes_table.py  0005_create_conversations.py  0006_user_preferences.py  0007_drop_transaction_currency.py  0008_create_suggestion_caches.py
apps/server/app/: __init__.py  main.py
apps/server/app/core/: __init__.py  auth.py  config.py
apps/server/app/db/: __init__.py  session.py  types.py
apps/server/app/graph/: __init__.py  state.py
apps/server/app/models/: __init__.py  conversation.py  note.py  suggestion_cache.py  todo.py  transaction.py  user.py
apps/server/app/services/: __init__.py  analytics.py  conversations.py  embeddings.py  notes.py  orchestrator.py  suggestions.py  supabase_auth.py  todos.py  tools.py  transactions.py  user.py
apps/server/app/v1/: analytics.py  (+10 more)
apps/server/docs/: README.md  architecture.md  auth.md
apps/server/tests/: test_analytics_endpoints.py  test_auth.py  test_auth_endpoints.py  test_chat_endpoints.py  test_config.py  test_conversations_endpoints.py  test_conversations_streaming.py  test_database.py  test_graph_nodes.py  test_llm_client_reasoning.py  test_llm_node.py  test_notes_endpoints.py  test_query_node.py  test_retrieve_node.py  test_suggestions.py  test_todos_endpoints.py  test_tools.py  test_transactions_endpoints.py  test_user_service.py
(+47 files in other folders)
