[project]
name = "omni-server"
version = "0.1.0"
description = "Omni AI backend API"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic==1.18.4",
    "cryptography==46.0.3",
    "fastapi==0.128.7",
    "httpx==0.28.1",
    "langgraph==0.6.11",
    "psycopg[binary]==3.3.4",
    "PyJWT==2.12.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.11.0",
    "SQLAlchemy==2.0.49",
    "uvicorn==0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
